syntax = "proto3";

package calculator;

option go_package = "github.com/trevorrobertsjr/trevor-grpc-go/calculator/proto";

message CalculatorRequest {
    int32 number1 = 1;
    int32 number2 = 2;
}

message CalculatorResponse {
    int32 sum =1;
}

service CalculatorService {
    rpc Calculator (CalculatorRequest) returns (CalculatorResponse);
}